--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/material": "^7.3.1",
+    "@mui/joy": "^5.0.0-beta.52",
     "ag-grid-community": "^34.1.1",
     "ag-grid-react": "^34.1.1",
     "axios": "^1.11.0",
