--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,7 +18,8 @@
     "ag-grid-react": "^34.1.1",
     "axios": "^1.11.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
